--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,55 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul>
-      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
-      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
-      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
-      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
-      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <div class="album-header group">
-      <% if @user == current_user %>
-        <div class="photo-upload-form">
-          <%= render partial: "photos/form" %>
-        </div>
-        <div class="album-button">
-          <%= button_to "Create Album", new_album_url, method: :get %>
-        </div>
-      <% end %>
-    </div>
-    <div class="albums">
-      <% if @photo %>
-        <ul>
-          <li>
-            <a href="<%= user_photos_url(@user) %>">
-              <figure>
-                <figcaption>All Photos</figcaption>
-                <%= image_tag @photo.img.url(:medium) %>
-              </figure>
-            </a>
-          </li>
-          <% @user.albums.each do |album| %>
-            <li>
-              <a href="<%= user_album_url(@user, album) %>">
-                <figure>
-                  <figcaption><%= album.title.html_safe %></figcaption>
-                  <%= image_tag album.photos.first.img.url(:medium) %>
-                </figure>
-              <a>
-            </li>
-          <% end %>
-        </ul>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render partial: "albums/index", locals: {user: @user, photo: @photo} %>
