--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,5 +1,4 @@
 <% owner = comment.user %>
-<% like = Like.find_by_data(current_user.id, "Comment", comment.id) %>
 <% profile = owner.profile %>
 <div class="comment group">
   <div class="comment-img">
@@ -9,22 +8,7 @@
     <%= link_to "#{owner.name}:", user_profile_url(owner) %>
     <%= comment.body.html_safe %>
   </div>
-  <div class="comment-footer group">
-    <ul>
-      <li><%= comment.created_at %></li>
-      <li>
-        <% if like %>
-          <%= link_to "Unlike", likes_url(like_id: like.id, user_id: params[:user_id]), method: :delete %>
-        <% else %>
-          <%= link_to "Like", likes_url( object_type: "Comment", object_id: comment.id, user_id: params[:user_id]), method: :post %>
-        <% end %>
-      </li>
-      <li>
-        <% like_count = Like.like_count_by_object(comment) %>
-        <% if like_count != 0%>
-          <%= pluralize(like_count, "Like") %>
-        <% end %>
-      </li>
-    </ul>
+  <div class="like-links group">
+    <%= render partial: "likes/show", locals: { object: comment, object_type: "Comment"} %>
   </div>
 </div>
