--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,37 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul>
-      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
-      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
-      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
-      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
-      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <div class="photos">
-      <h3>Photos:</h3>
-      <br>
-      <ul>
-        <% @photos.each do |photo| %>
-          <li>
-            <a href="<%= user_photo_url(@user, photo) %>">
-              <figure>
-                <figcaption><%= photo.caption.html_safe %></figcaption>
-                <%= image_tag photo.img.url(:medium) %>
-              </figure>
-            </a>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</div>
+<%= render partial: "photos/index", locals: {user: @user, photos: @photos} %>
