--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,63 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul>
-      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
-      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
-      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
-      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
-      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <div class="photo">
-      <h3><%= @photo.caption.html_safe %></h3>
-      <br>
-      <%= image_tag @photo.img.url %>
-      <% tags = @photo.tags %>
-      <% self_tag = tags.where("user_id = ?", current_user.id) %>
-      <% tagged_users = tags.map { |tag| User.find(tag.user_id) } %>
-      <% unless tags.empty? %>
-        <% unless self_tag.empty? %>
-          <br>
-          <%= button_to "Remove your tag", tag_url(self_tag), method: :delete %>
-        <% end %>
-        <br>
-        <h4>Tagged in this photo:</h4>
-        <br>
-        <ul class="tagged-list">
-          <% tagged_users.each do |user| %>
-            <li class="tag-item">
-              <a href="<%= user_profile_url(user) %>">
-                <%= user.name.html_safe %>
-              </a>
-            <li>
-          <% end %>
-        </ul>
-        <br>
-      <% end %>
-      <% friends = current_user.friends %>
-      <% unless friends.empty? %>
-        <% friends.each do |friend| %>
-          <% unless tagged_users.include?(friend) %>
-            <form action="<%= user_photo_tags_url(@user, @photo) %>" method="post">
-              <input
-                name="authenticity_token"
-                type="hidden"
-                value="<%= form_authenticity_token %>">
-              <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
-              <input type="submit" value="<%= "Tag " + friend.name.html_safe + "!" %>">
-            </form>
-          <% end %>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render partial: "photos/show", locals: {user: @user, photo: @photo} %>
