--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,51 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul>
-      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
-      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
-      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
-      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
-      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <div class="about-content group">
-      <% profile = @user.profile %>
-      <div class="about-img">
-        <%= image_tag profile.profile_img.url(:big) %>
-      </div>
-      <div class="about-list">
-        <ul>
-          <li><h3><%= @user.name.html_safe %></h3></li>
-          <li>Birthday: &nbsp;<%= @user.bday %></li>
-          <li>Location: &nbsp;<%= profile.location.html_safe %></li>
-          <li>Employer: &nbsp;<%= profile.employer.html_safe %></li>
-          <li>School: &nbsp;<%= profile.school.html_safe %></li>
-        </ul>
-      </div>
-      <div class="about-links">
-        <a href="<%= user_albums_url(@user) %>">Photos</a>
-        <% num_friends = @user.friends.count %>
-        <% unless num_friends == 0 %>
-          <a href="<%= friends_user_url(@user) %>"><%= pluralize(num_friends, "Friend") %></a>
-        <% end %>
-      </div>
-    </div>
-    <div class="status-list">
-      <%= render partial: "statuses/form", locals: { status: @status } %>
-    </div>
-    <div class="wall-posts">
-      <% @user.wall_posts.each do |post| %>
-        <%= render partial: "statuses/show", locals: { status: post }%>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render partial: "profiles/show", locals: {user: @user} %>
