--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,70 +1,1 @@
-<% friends = current_user.friends %>
-<% pending_request_friends = current_user.pending_request_friends %>
-<% pending_friends = current_user.pending_friends %>
-<% @users.reject! { |user| friends.include?(user) || pending_request_friends.include?(user) || user == current_user } %>
-
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul>
-      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
-      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
-      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
-      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
-      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <div class="user-list">
-      <% unless friends.empty? %>
-        <h1>Friends</h1>
-        <br>
-        <% friends.each do |friend| %>
-          <div class="user group">
-            <% friendship = Friendship.find_pair(current_user, friend) %>
-            <br>
-            <%= image_tag friend.profile.profile_img.url(:small) %>
-            <%= friend.name.html_safe %>
-            <br>
-            <%= button_to "Unfriend", friendship_url(friendship), method: "delete" %>
-            <br>
-            <form action="<%= new_message_url %>" method="get">
-              <input type="hidden" name="recipient_id" value="<%= friend.id %>">
-              <input type="submit" value="Send Message">
-            </form>
-          </div>
-        <% end %>
-        <br>
-      <% end %>
-
-      <% unless @users.empty? %>
-        <h1>Users</h1>
-        <% @users.each do |user| %>
-          <div class="user group">
-            <br>
-            <%= image_tag user.profile.profile_img.url(:small) %>
-            <%= user.name.html_safe %>
-            <br>
-            <% if pending_friends.include?(user) %>
-              <% friendship = Friendship.find_pair(current_user, user) %>
-              <%= button_to "Pending: Cancel Request", friendship_url(friendship), method: "delete" %>
-            <% else %>
-              <%= button_to "Friend Request", user_friendship_url(user), method: "post" %>
-            <% end %>
-            <form action="<%= new_message_url %>" method="get">
-              <input type="hidden" name="recipient_id" value="<%= user.id %>">
-              <input type="submit" value="Send Message">
-            </form>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render partial: "users/index", locals: {users: @users} %>
