--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,45 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul>
-      <li><a href="<%= user_profile_url(current_user) %>">Profile</a></li>
-      <li><a href="<%= user_newsfeed_url(current_user) %>">Newsfeed</a></li>
-      <li><a href="<%= user_albums_url(current_user) %>">Photo Albums</a></li>
-      <li><a href="<%= friends_user_url(current_user) %>">Friends</a></li>
-      <li><a href="<%= user_message_threads_url(current_user) %>">Messages</a></li>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <div class="album-form">
-      <form action="<%= albums_url %>" method="post">
-        <input
-          name="authenticity_token"
-          type="hidden"
-          value="<%= form_authenticity_token %>">
-        <label>Album Title:
-        <br>
-        <input type="text" name="album[title]">
-        </label>
-        <br>
-        <h3>Add Photos to Album:</h3>
-        <br>
-        <% @photos.each do |photo| %>
-          <input type="checkbox" name="album[photo_ids][]" id="<%= 'photo-#{photo.id}' %>" value="<%= photo.id %>">
-          <label for="<%= 'photo-#{photo.id}' %>">
-            <figure>
-              <figcaption><%= photo.caption.html_safe %></figcaption>
-              <%= image_tag photo.img.url(:medium) %>
-            </figure>
-        <% end %>
-        <input type="submit" value="Create Album">
-      </form>
-    </div>
-  </div>
-</div>
+<%= render partial: "albums/new", locals: {photos: @photos} %>
