--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<form action="<%= comments_url %>" method="POST">
+<form class="comment-form" action="<%= comments_url %>" data-remote="true" method="POST">
   <input
     name="authenticity_token"
     type="hidden"
