--- a/app/views/message_threads/index.html.erb
+++ b/app/views/message_threads/index.html.erb
@@ -1,30 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul class="messaged-friends-list">
-      <% @messaged_friends_with_thread.each do |pair| %>
-        <% friend = pair[0] %>
-        <% thread = pair[1] %>
-        <li>
-          <a href="<%= user_message_thread_url(current_user, thread) %>">
-            <div class="user-img">
-              <%= image_tag friend.profile.profile_img.url(:small) %>
-            </div>
-            <div class="user-name">
-              <%= friend.name.html_safe %>
-            </div>
-          </a>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-  </div>
-</div>
+<%= render partial: "message_threads/index", locals: {messaged_friends_with_thread: @messaged_friends_with_thread} %>
