--- a/app/views/message_threads/show.html.erb
+++ b/app/views/message_threads/show.html.erb
@@ -1,54 +1,1 @@
-<header>
-  <div class="header-wrapper">
-    <div class="logo"></div>
-    <%= render partial: "root/header", locals: { user: current_user } %>
-  </div>
-</header>
-
-<div class="content">
-  <div class="left-sidebar">
-    <ul class="messaged-friends-list">
-      <% @messaged_friends_with_thread.each do |pair| %>
-        <% friend = pair[0] %>
-        <% thread = pair[1] %>
-        <li>
-          <a href="<%= user_message_thread_url(current_user, thread) %>">
-            <div class="user-img">
-              <%= image_tag friend.profile.profile_img.url(:small) %>
-            </div>
-            <div class="user-name">
-              <%= friend.name %>
-            </div>
-          </a>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-
-  <div class="middle-content">
-    <h1><%= "Conversation with #{@them.name}: "%></h1>
-    <ul>
-      <% @thread.messages.order("messages.created_at").each do |message| %>
-        <% if message.owner_id == current_user.id %>
-          <% friend = current_user %>
-        <% else %>
-          <% friend = @them %>
-        <% end %>
-        <li>
-          <div class="user-img">
-            <%= image_tag friend.profile.profile_img.url(:small) %>
-          </div>
-          <div class="user-name">
-            <a href="<%= user_profile_url(friend) %>">
-              <%= friend.name.html_safe %>
-            </a>
-          </div>
-          <div class="message-body">
-            <%= message.body.html_safe %>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-    <%= render partial: "messages/form", locals: { recipient_id: @them.id} %>
-  </div>
-</div>
+<%= render partial: "message_threads/show", locals: {thread: @thread, them: @them} %>
