--- a/app/views/root/_header.html.erb
+++ b/app/views/root/_header.html.erb
@@ -1,14 +1,12 @@
-<% user = current_user %>
-
 <div class="logo">LOOKBOOK</div>
 
 <div class="signed-in-header-links">
   <ul>
-    <li><a href="<%= user_profile_url(user) %>"><img><%= user.fname %></a></li>
-    <li><a href="<%= root_url %>">Home</a></li>
-    <li><a href="<%= users_url %>">Find Friends</a></li>
-    <li><a href="<%= requests_users_url %>"><img>Friend Requests</a></li>
-    <li><a href="<%= user_message_threads_url(user) %>"><img>Inbox</a></li>
+    <li><a href="<%= user_profile_url(current_user) %>" data-remote="true"><%= user.fname %></a></li>
+    <li><a href="<%= user_newsfeed_url(current_user) %>" data-remote="true">Home</a></li>
+    <li><a href="<%= users_url %>" data-remote="true">Find Friends</a></li>
+    <li><a href="<%= requests_users_url %>" data-remote="true">Friend Requests</a></li>
+    <li><a href="<%= user_message_threads_url(current_user) %>" data-remote="true">Inbox</a></li>
     <li><%= button_to "Log Out", session_url, method: "delete", class: "logout-button" %></li>
   </ul>
 </div>
