--- a/app/views/statuses/_show.html.erb
+++ b/app/views/statuses/_show.html.erb
@@ -1,5 +1,4 @@
 <% owner = User.find(status.owner_id) %>
-<% like = Like.find_by_data(current_user.id, "Status", status.id) %>
 <% profile = owner.profile %>
 <div class="status">
   <div class="status-data group">
@@ -21,32 +20,20 @@
       <div class="status-body">
         <%= status.body.html_safe %>
       </div>
-      <div class="status-links group">
-        <ul>
-          <li>
-            <% if like %>
-              <%= link_to "Unlike", likes_url(like_id: like.id, user_id: params[:user_id]), method: :delete %>
-            <% else %>
-              <%= link_to "Like", likes_url( object_type: "Status", object_id: status.id, user_id: params[:user_id]), method: :post %>
-            <% end %>
-          </li>
-          <li>
-            <% like_count = Like.like_count_by_object(status) %>
-            <% if like_count != 0%>
-              <%= pluralize(like_count, "Like") %>
-            <% end %>
-          </li>
-        </ul>
+      <div class="like-links group">
+        <%= render partial: "likes/show", locals: {object: status, object_type: "Status"} %>
       </div>
     </div>
     <br>
   </div>
-  <div class="comment-list">
+  <div class="comment-data">
     <h3>Comments</h3>
-    <% status.comments.each do |comment| %>
-      <%= render partial: "comments/show", locals: { comment: comment } %>
-      <br>
-    <% end %>
+    <div class="comment-list">
+      <% status.comments.each do |comment| %>
+        <%= render partial: "comments/show", locals: { comment: comment } %>
+        <br>
+      <% end %>
+    </div>
     <%= render partial: "comments/form", locals: { object: status } %>
   </div>
 </div>
