html escape/safe test

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -359,3 +359,15 @@ header {
   margin-right: 10px;
   float: left;
 }
+
+// NOTIFICATIONS STYLING
+
+.notification {
+  width: 505px;
+  margin-left: 140px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  border-top: 2px solid white;
+  text-align: center;
+}
