--- a/app/views/photos/_show.html.erb
+++ b/app/views/photos/_show.html.erb
@@ -1,12 +1,12 @@
 <div class="photo">
   <% if photo.caption %>
-    <h3><%= photo.caption.html_safe %></h3>
+    <h3><%= photo.caption.html_escape %></h3>
   <% end %>
   <br>
   <%= image_tag photo.img.url %>
   <% tags = photo.tags %>
   <% self_tag = tags.where("user_id = ?", current_user.id) %>
-  <% tagged_users = tags.map { |tag| User.find(tag.user_id) } %>
+  <% tagged_users = tags.map { |tag| tag.tagged_user } %>
   <% unless tags.empty? %>
     <% unless self_tag.empty? %>
       <br>
@@ -19,7 +19,7 @@
       <% tagged_users.each do |user| %>
         <li class="tag-item">
           <a href="<%= user_profile_url(user) %>">
-            <%= user.name.html_safe %>
+            <%= user.name.html_escape %>
           </a>
         <li>
       <% end %>
@@ -37,7 +37,7 @@
               type="hidden"
               value="<%= form_authenticity_token %>">
             <input type="hidden" name="tagged_user_id" value="<%= friend.id %>">
-            <input type="submit" value="<%= "Tag " + friend.name.html_safe + "!" %>">
+            <input type="submit" value="<%= "Tag " + friend.name.html_escape + "!" %>">
           </form>
         <% end %>
       <% end %>
