--- a/app/views/profiles/_show.html.erb
+++ b/app/views/profiles/_show.html.erb
@@ -5,11 +5,11 @@
   </div>
   <div class="about-list">
     <ul>
-      <li><h3><%= user.name.html_safe %></h3></li>
+      <li><h3><%= user.name.html_escape %></h3></li>
       <li>Birthday: &nbsp;<%= user.bday %></li>
-      <li>Location: &nbsp;<%= profile.location.html_safe %></li>
-      <li>Employer: &nbsp;<%= profile.employer.html_safe %></li>
-      <li>School: &nbsp;<%= profile.school.html_safe %></li>
+      <li>Location: &nbsp;<%= profile.location.html_escape %></li>
+      <li>Employer: &nbsp;<%= profile.employer.html_escape %></li>
+      <li>School: &nbsp;<%= profile.school.html_escape %></li>
       <% if params[:user_id].to_i == current_user.id %>
       <li><a class="edit-profile-link" href="<%= edit_user_profile_url(current_user) %>" data-remote="true">Edit Your Profile</a></li>
       <% end %>
