--- a/app/views/users/_requests.html.erb
+++ b/app/views/users/_requests.html.erb
@@ -6,11 +6,35 @@
     <% pending_request_friends.each do |pending_request_friend| %>
       <% friendship = Friendship.find_pair(current_user, pending_request_friend) %>
       <br>
-      <%= pending_request_friend.name.html_safe %>
+      <%= pending_request_friend.name.html_escape %>
       <br>
-      <%= button_to "Accept Friend Request", friendship_url(friendship), method: "put", class: "friend-button", "data-remote" => "true" %>
-      <%= button_to "Delete Friend Request", deny_friendship_url(friendship), method: "delete ", class: "friend-button", "data-remote" => "true" %>
-      <%= button_to "Send Message", new_message_url, method: :get, recipient_id: pending_request_friend.id %>
+
+      <form class="friend-button" action="<%= friendship_url(friendship) %>" data-remote="true" method="post">
+        <input
+          name="authenticity_token"
+          type="hidden"
+          value="<%= form_authenticity_token %>">
+        <input type="hidden" name="_method" value="PUT">
+        <input type="submit" value="Accept Friend Request">
+      </form>
+
+      <form class="friend-button" action="<%= deny_friendship_url(friendship) %>" data-remote="true" method="post">
+        <input
+          name="authenticity_token"
+          type="hidden"
+          value="<%= form_authenticity_token %>">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Delete Friend Request">
+      </form>
+
+      <form class="friend-button" action="<%= new_message_url %>" data-remote="true" method="get">
+        <input
+          name="authenticity_token"
+          type="hidden"
+          value="<%= form_authenticity_token %>">
+        <input type="hidden" name="recipient_id" value="<%= pending_request_friend.id %>">
+        <input type="submit" value="Send Message">
+      </form>
     <% end %>
 </div>
 <% else %>
